2013-02-25 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Reco_trf.py Add outputDAODM_HSG1File to LODPK
    * tagging as PATJobTransforms-00-04-43-02

2013-01-11 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * ProdSysDicTools.py Correct bad panda data format of HITS, changing to Hits
    * ArgDictTools.py 'a' tags should be interpreted from panda
    * Tagging as PATJobTransforms-00-04-43-01

2012-12-13 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Reco_trf.py Add DAOD_JPSIMUMU and DAOD_UPSIMUMU outputs to LODPK (from James Catmore)
    * Tagging as PATJobTransforms-00-04-43

2012-12-11 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * skeleton.MergePool.py Remove SkipBadFiles=True flag (causes undetected event loss!)
    * Reco_trf.py Add outputNTUP_TPHSG2File to LODPK (from Susumu Oda)
    * MergeNTUP_trf.py Add inputNTUP_TPHSG2File, outputNTUP_TPHSG2File to LODPK (from Susumu Oda)
    * Tagging as PATJobTransforms-00-04-42

2012-12-06 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * AODtoTAG_trf.py Implement event check for inputAODFile and outputTAGFile
    * MergePool_trf.py Implement event check for input and output AOD/ESD files
    * Tagging as PATJobTransforms-00-04-41

2012-12-03 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Reco_trf.py Add --extraignorefilter to LODPK
    * ProdSysDicTools.py Convert %2B to + in tag values returned from panda
    * Tagging as PATJobTransforms-00-04-40

2012-11-26 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Removed NTUP_TOPFJET from all transformations on the request
	  of Kevin Finelli. (Type now merged with NTUP_TOPJET.)
	* Tagging as PATJobTransforms-00-04-39

2012-11-16  Susumu Oda  <Susumu.Oda@cern.ch>
	* adding NTUP_2L2QHSG, NTUP_4LHSG2 to Reco_trf, MergeNTUP_trf 
	* Tagging as PATJobTransforms-00-04-38

2012-11-16  Karsten Koeneke  <karsten.koeneke@cern.ch>
	* scripts/Reco_trf.py (ListOfDefaultPositionalKeys): Adding stream
	* Tagging as PATJobTransforms-00-04-37
